--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -26,15 +26,13 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-md="6">
-        <ion-button expand="block" color="success" shape="round" (click)="recordattendance('entrance')">
-          <ion-icon slot="start" name="log-in-outline"></ion-icon>
-          Entrada
+        <ion-button expand="block" color="success" shape="round" (click)="recordattendance('Entrance')">
+          Registrar Entrada
         </ion-button>
       </ion-col>
       <ion-col size="12" size-md="6">
-        <ion-button expand="block" color="danger" shape="round" (click)="recordattendance('departure')">
-          <ion-icon slot="start" name="log-out-outline"></ion-icon>
-          Salida
+        <ion-button expand="block" color="danger" shape="round" (click)="recordattendance('Departures')">
+          Registrar Salida
         </ion-button>
       </ion-col>
     </ion-row>
