--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,23 +1,23 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Login</ion-title>
+  <ion-toolbar color="light">
+    <ion-title class="ion-text-center">Iniciar Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <form #form="ngForm" (ngSubmit)="login(form)">
-    <ion-card>
-      <ion-card-header class="ion-text-center icon-header">
+    <ion-card class="login-card">
+      <ion-card-header class="ion-text-center">
         <div class="icon-wrapper">
           <ion-icon name="person-circle-outline" class="main-icon"></ion-icon>
         </div>
-        <ion-card-title>Welcome</ion-card-title>
-        <ion-card-subtitle>Coloque sus datos</ion-card-subtitle>
+        <ion-card-title>Bienvenido</ion-card-title>
+        <ion-card-subtitle>Ingrese su email y contraseña</ion-card-subtitle>
       </ion-card-header>
 
       <ion-card-content>
-        <ion-item>
-          <ion-label position="stacked">Email</ion-label>
+        <ion-item lines="full">
+          <ion-label position="floating">Email</ion-label>
           <ion-input
             type="email"
             name="email"
@@ -26,28 +26,27 @@
           ></ion-input>
         </ion-item>
 
-        <ion-item>
-          <ion-label position="stacked">Password</ion-label>
+        <ion-item lines="full">
+          <ion-label position="floating">Contraseña</ion-label>
           <ion-input
             [type]="VisiblePassword ? 'text' : 'password'"
             name="password"
             [(ngModel)]="credentials.password"
             required
           ></ion-input>
-          <ion-icon
-            slot="end"
-            [name]="VisiblePassword ? 'eye-off' : 'eye'"
-            class="password-toggle"
-            (click)="togglePassword()"
-          ></ion-icon>
+          <ion-buttons slot="end">
+            <ion-button fill="clear" size="small" (click)="togglePassword()">
+              <ion-icon [name]="VisiblePassword ? 'eye-off' : 'eye'"></ion-icon>
+            </ion-button>
+          </ion-buttons>
         </ion-item>
 
-        <ion-button expand="block" type="submit" class="ion-margin-top"
-          >Login</ion-button
-        >
-        <ion-button expand="block" fill="clear" (click)="Register()"
-          >Nueva Cuenta</ion-button
-        >
+        <ion-button expand="block" type="submit" class="ion-margin-top">
+          Iniciar Sesión
+        </ion-button>
+        <ion-button expand="block" fill="clear" (click)="Register()">
+          Crear cuenta
+        </ion-button>
       </ion-card-content>
     </ion-card>
   </form>
