--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -16,3 +16,15 @@ ion-item {
 ion-button {
   margin-top: 30px;
 }
+.login-card {
+  border-radius: 20px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+  transition: transform 0.3s ease-in-out;
+}
+
+.main-icon {
+  font-size: 64px;
+  color: #3880ff;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
