--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -4,11 +4,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding dark-content">
+<ion-content class="ion-padding">
   <form #registroForm="ngForm">
     <ion-card class="dark-card">
       <ion-card-header class="ion-text-center icon-header">
-        <div class="icon-wrapper"></div>
+        <div class="icon-wrapper">
+          <ion-icon name="person-add" class="main-icon"></ion-icon>
+        </div>
         <ion-card-title>Crear cuenta</ion-card-title>
         <ion-card-subtitle>Complete los campos requeridos</ion-card-subtitle>
       </ion-card-header>
